bank_Loan_prediction

--- a/bankloan.ipynb
+++ b/bankloan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKZGqdmmYIgIJAT/oieFUR",
+      "authorship_tag": "ABX9TyMvgMMEAVo2qAWxRtq+71xT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1867,12 +1867,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#Testing of the modle"
+        "#Testing of the model"
       ],
       "metadata": {
         "id": "X6AWH3sxRt-_"
       },
-      "execution_count": 93,
+      "execution_count": 94,
       "outputs": []
     },
     {
